// SPDX-FileCopyrightText: 2025 Shun Sakai
//
// SPDX-License-Identifier: Apache-2.0 OR MIT

= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/sfc-rs
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2025-02-22

=== Added

* Add `Sfc32::new` and `Sfc64::new` methods ({pull-request-url}/11[#11])

=== Changed

* Bump MSRV to 1.85.0 ({pull-request-url}/9[#9])

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2025-02-19

=== Added

* Initial release