@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.1.1\...HEAD[Unreleased]
+
+=== Changed
+
+* Update crate-level documentation ({pull-request-url}/15[#15])
+
 == {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2025-02-22
 
 === Added
